Add md5 generator tool

--- a/config.toml
+++ b/config.toml
@@ -41,3 +41,8 @@ weight = 19
 name = "About"
 url = "/about"
 weight = 20
+
+[[menu.shortcuts]]
+name = "Tool: MD5 Generator"
+url = "/md5"
+weight = 21
